// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component sanity matches default snapshot 1`] = `
.c2 {
  box-sizing: border-box;
}

.c4 {
  color: #3F3D4B;
  margin-left: 4px;
  margin-right: 8px;
}

.c4 {
  box-sizing: border-box;
}

.c3 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  color: #3F3D4B;
  margin-left: 4px;
  margin-right: 8px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c1 > input {
  position: relative;
  display: block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 1.5rem;
  width: 1.5rem;
  margin: 0;
}

.c1 > svg {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
  fill: #CCC;
}

.c1 > svg[name='checked'] {
  display: none;
  z-index: 1;
  fill: #000;
}

.c1 > input:checked ~ svg[name='checked'] {
  display: block;
}

<label
  class="c0"
  color="primary"
  opacity="1"
>
  <div
    class="c1 c2"
  >
    <input
      color="primary"
      theme="[object Object]"
      type="checkbox"
    />
    <svg
      class=""
      fill="currentcolor"
      height="24"
      name="checked"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
    <svg
      class=""
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
  </div>
  <div
    class="c3 c4"
    color="copyColor"
    font-family="sansSerif"
    font-size="1"
    font-weight="3"
  />
</label>
`;

exports[`Checkbox component sanity matches themed snapshot 1`] = `
.c3 {
  box-sizing: border-box;
}

.c5 {
  color: #3F3D4B;
  margin-left: 4px;
  margin-right: 8px;
}

.c5 {
  box-sizing: border-box;
}

.c4 {
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1;
  text-align: left;
  color: #3F3D4B;
  margin-left: 4px;
  margin-right: 8px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  display: inline-block;
}

.c2 > input {
  position: relative;
  display: block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 1.5rem;
  width: 1.5rem;
  margin: 0;
}

.c2 > svg {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
  fill: #CCC;
}

.c2 > svg[name='checked'] {
  display: none;
  z-index: 1;
  fill: #4E3FCE;
}

.c2 > input:checked ~ svg[name='checked'] {
  display: block;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <label
    class="c1"
    color="primary"
    opacity="1"
  >
    <div
      class="c2 c3"
    >
      <input
        color="primary"
        theme="[object Object]"
        type="checkbox"
      />
      <svg
        class=""
        fill="currentcolor"
        height="24"
        name="checked"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <svg
        class=""
        fill="currentcolor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </div>
    <div
      class="c4 c5"
      color="copyColor"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    />
  </label>
</div>
`;
